# burnbox

./: .gitignore  CHANGELOG.md  LAUNCH.md  LICENSE  README.md  burnbox.py  pyproject.toml
.github/workflows/: ci.yml
burnbox/: __init__.py  __main__.py  account.py  api.py  cli.py  client.py  config.py  detectors.py  exceptions.py  messages.py  models.py  notifications.py  retry.py  schemas.py  security.py  session.py
burnbox/cli/: __init__.py  commands.py  poll.py  render.py
burnbox/detectors/: __init__.py  base.py  clipboard.py  engine.py  i18n.py
burnbox/detectors/parsers/: __init__.py  alphanumeric_otp.py  labeled_otp.py  numeric_otp.py  reset_link.py  url_code.py
burnbox/providers/: __init__.py  base.py  dropmail.py  guerrillamail.py  mailgw.py  mailtm.py  onesecmail.py  registry.py  sanitize.py  tempfastmail.py  utils.py
docs/superpowers/plans/: 2026-05-13-burnbox-v2.md
docs/superpowers/specs/: 2026-05-13-burnbox-v2-design.md
tests/: conftest.py  test_account.py  test_api.py  test_api_request.py  test_cli.py  test_client.py  test_config.py  test_detectors.py  test_integration.py  test_messages.py  test_models.py  test_notifications.py  test_providers.py  test_registry.py  test_retry.py  test_sanitize.py  test_security.py  test_services.py  test_session.py
