[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burnbox"
version = "2.0.0"
description = "Temporary email that burns after reading"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "html2text",
    "rich",
    "typer",
    "pyperclip",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
burnbox = "burnbox.cli:app"
